# read-smart

./: .eslintrc.json  .gitignore  CHANGELOG.md  GETTING_STARTED.md  Makefile  README.md  TODO.md  package-lock.json  package.json
.github/workflows/: ci.yml
backend/: .env.example  README.md  architecture.md  changes.md  instructions.md  openmemory.md  pyproject.toml  todo.md
backend/.cursor/rules/: task.mdc
backend/app/: config.py  database.py  main.py  schemas.py
backend/app/routers/: config_router.py  pages.py
backend/app/services/: __init__.py  content_processor.py  llm_service.py  memory_service.py
backend/app/utils/: __init__.py
docs/: ARCHITECTURE.md  GETTING_STARTED.md
notebook/: README.md  memory.ipynb  pyproject.toml
plugin/: README.md  background.js  content.js  manifest.json  popup.html  popup.js  reader-styles.css
plugin/lib/: README.md  memory-enhanced-reading.js  tailwind.min.css
plugin/src/css/: popup.css  progress-overlay.css  reader-styles.css  skeleton.css  styles.css
plugin/src/html/: popup.html  progress-overlay.html  reader.html  skeleton.html
plugin/src/js/: background.js  cache.js  content.js  popup.js
plugin/src/js/core/: content.js  popup.js
plugin/src/js/features/: memory-deduplication.js
plugin/src/js/managers/: config-manager.js  event-manager.js  memory-manager.js  storage-manager.js
tests/: background.test.js  cache.test.js  content.test.js  deduplicator.test.js  jest.setup.js  managers.test.js
